--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -42,4 +42,13 @@
 		<servlet-name>SalesServlet</servlet-name>
 		<url-pattern>/SalesServlet</url-pattern>
 	</servlet-mapping>
+		<servlet>
+		<display-name>ReportServlet</display-name>
+		<servlet-name>ReportServlet</servlet-name>
+		<servlet-class>cn.sqat.controller.ReportServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ReportServlet</servlet-name>
+		<url-pattern>/ReportServlet</url-pattern>
+	</servlet-mapping>
 </web-app>
