--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>LoginServlet</servlet-name>
-		<url-pattern>/LoginServlet</url-pattern>
+		<url-pattern>/login</url-pattern>
 	</servlet-mapping>
 	<servlet>
 		<display-name>TelegramServlet</display-name>
@@ -22,7 +22,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>TelegramServlet</servlet-name>
-		<url-pattern>/TelegramServlet</url-pattern>
+		<url-pattern>/added_sale</url-pattern>
 	</servlet-mapping>
 	<servlet>
 		<display-name>LogoutServlet</display-name>
@@ -31,7 +31,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>LogoutServlet</servlet-name>
-		<url-pattern>/LogoutServlet</url-pattern>
+		<url-pattern>/logout</url-pattern>
 	</servlet-mapping>
 	<servlet>
 		<display-name>SalesServlet</display-name>
@@ -40,24 +40,42 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>SalesServlet</servlet-name>
-		<url-pattern>/SalesServlet</url-pattern>
+		<url-pattern>/sales</url-pattern>
 	</servlet-mapping>
-		<servlet>
+	<servlet>
 		<display-name>ReportServlet</display-name>
 		<servlet-name>ReportServlet</servlet-name>
 		<servlet-class>cn.sqat.controller.ReportServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>ReportServlet</servlet-name>
-		<url-pattern>/ReportServlet</url-pattern>
+		<url-pattern>/report</url-pattern>
 	</servlet-mapping>
-			<servlet>
+	<servlet>
 		<display-name>CommissionServlet</display-name>
 		<servlet-name>CommissionServlet</servlet-name>
 		<servlet-class>cn.sqat.controller.CommissionServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>CommissionServlet</servlet-name>
-		<url-pattern>/CommissionServlet</url-pattern>
+		<url-pattern>/commission</url-pattern>
+	</servlet-mapping>
+		<servlet>
+		<display-name>AboutServlet</display-name>
+		<servlet-name>AboutServlet</servlet-name>
+		<servlet-class>cn.sqat.controller.AboutServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AboutServlet</servlet-name>
+		<url-pattern>/about</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<display-name>AddServlet</display-name>
+		<servlet-name>AddServlet</servlet-name>
+		<servlet-class>cn.sqat.controller.AddServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AddServlet</servlet-name>
+		<url-pattern>/add</url-pattern>
 	</servlet-mapping>
 </web-app>
